Creato con Colab

--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# FOOOCUS"
+        "# **FOOOCUS**"
       ],
       "metadata": {
         "id": "d7Or4cYdZoKl"
